--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^12.2.17",
     "@angular/router": "^12.2.17",
     "download": "^8.0.0",
+    "ng-zorro-antd": "^12.1.1",
     "rxjs": "~6.6.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
