--- a/backend/package.json
+++ b/backend/package.json
@@ -2,9 +2,10 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "json-server --watch db.json --port 3000"
+    "start": "node server.js",
+    "dev:api": "node server.js"
   },
   "keywords": [],
   "author": "",
